--- a/src/template/partials/global/menu.hbs
+++ b/src/template/partials/global/menu.hbs
@@ -33,9 +33,9 @@
 
 	<div class="menu-content">
 			<a href="javascript:void(0)" class="camberwell"><span>Camberwell College of Arts</span></a>
-			<a href="./csm.html" class="csm"><span>Central Saint Martins</span></a>
-			<a href="javascript:void(0)" class="chelsea"><span>Chelsea College of Arts</span></a>
-			<a href="javascript:void(0)" class="comm"><span>London College of Communication</span></a>
+			<a href="csm.html" class="csm"><span>Central Saint Martins</span></a>
+			<a href="chelsea.html" class="chelsea"><span>Chelsea College of Arts</span></a>
+			<a href="lcc.html" class="comm"><span>London College of Communication</span></a>
 			<a href="javascript:void(0)" class="fashion"><span>London College of Fashion</span></a>
 			<a href="javascript:void(0)" class="wimbledon"><span>Wimbledon College of Arts</span></a>
 	</div>
