--- a/src/assets/scss/modules/global/_footer.scss
+++ b/src/assets/scss/modules/global/_footer.scss
@@ -2,8 +2,10 @@
 //  GLOBAL FOOTER
 // =============================================================================
 
-.global-footer {  
-
+.ual-footer {  
+	.placeholder {
+		margin: 0 auto;
+	}
  
 }
  
