--- a/src/template/pages/index.hbs
+++ b/src/template/pages/index.hbs
@@ -71,11 +71,11 @@
 			<div class="panel-container">
 			<div class="left panel">
 				<a href="#" title="Camberwell College of Arts">Camberwell College of Arts</a>
-				<a href="./csm.html" title="Central Saint Martins">Central Saint Martins</a>
-				<a href="#" title="Central Saint Martins">Chelsea College of Arts</a>
+				<a href="csm.html" title="Central Saint Martins">Central Saint Martins</a>
+				<a href="chelsea.html" title="Central Saint Martins">Chelsea College of Arts</a>
 			</div>
 			<div class="right panel">
-				<a href="#" title="London College of Communications">London College of Communications</a>
+				<a href="lcc.html" title="London College of Communications">London College of Communications</a>
 				<a href="#" title="London College of Fashion">London College of Fashion</a>
 				<a href="#" title="Wimbledon College of Arts">Wimbledon College of Arts</a>
 			</div>
@@ -104,7 +104,7 @@
 <section id="section-whatson"> 
 
 	<div class="inner-content content-desktop">
-		 <img src="assets/img/static-imgs/promo-whatson.png"> 
+		 <img src="assets/img/static-imgs/home.jpg"> 
 	</div> 
 	<div class="inner-content content-mobile">
 		 <img src="assets/img/static-imgs/promo-whatson-mob.png"> 
